Shang New Live/src/objects/Action_Taker__c.object
<CustomObject>
    <description>This is created to manage Property, Dept. in Charge and Person in Charge</description>
    <fields>
        <fullName>Action_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be mapped with Person In-Charge</description>
        <label>Action Taker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Action_Takers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in trigger for Admin team assignment wherein Request info do not match assignment criteria</description>
        <inlineHelpText>Please check this option for Admin Team assignment</inlineHelpText>
        <label>Admin Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Request__c</fullName>
        <label>Job Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Action_Takers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <description>Need automation</description>
        <label>Public Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Request__c</columns>
        <columns>Property__c</columns>
        <columns>Action_Taker__c</columns>
        <columns>Status__c</columns>
        <columns>Admin_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T{000000}</displayFormat>
        <label>Team No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>